--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/android": "^8.0.1",
     "@capacitor/camera": "^8.0.0",
     "@capacitor/filesystem": "^8.0.0",
+    "@capacitor/preferences": "^8.0.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
